--- a/_posts/2015-11-24-When.md
+++ b/_posts/2015-11-24-When.md
@@ -13,13 +13,13 @@ twitter_text: 'How to install Jekyll.'
 ####Introduction 
 Last couple of weeks we have been going over differnces and similarties between static and dynamic website. But the crucial question of this work is, When static/dynamic website is the best choice for you?  
 If you only have a need for a very basic website that has just a couple pages, you may not see a need to go down the route of dynamic server-side programming and choose to write static client-side HTML and CSS pages. For example, the website you are surrfing right now. It's a very basic website with no features included, all you can do is just read from it.  
-In the other hand, if there are specific needs or features that must be included with the website, the only way to get those is to go with a dynamic server-side programming method. For example, if you need your website to have login capabilities or You want your website to stay fresh and up-to-date with the latest styles and trends, without accomplish that manually, then you would need to go with dynamic website.
+In the other hand, if there are specific needs or features that must be included with the website, the only way to get those is to go with a dynamic server-side programming method. For example, if you need your website to have login capabilities or you want your website to stay fresh and up-to-date with the latest styles and trends, without accomplish that manually, then you would need to go with dynamic website.  
+{% highlight ruby %}
+So in one sentence, if the website needs to connect to databases then dynamic website is your only choice. Where if your website in its simplest form like publishing document blogs or any type of data in general, then going with static website is the best option.  
+{% endhighlight %}
 
 
-
-- Abbanat, Cherie, Professor. Front-End and Back-End Development. Digital image
-- US, BBC. Static vs Dynamic Website. Digital image. BBC. N.p., n.d. Web. 16 Nov. 2015.
 
 For more information Check out these links  
-<a href="https://www.youtube.com/watch?v=62IIWgdBFeQ">Front End Development vs Back End Development With Chris Castiglione</a>  
-<a href="http://blog.digitaltutors.com/whats-difference-front-end-back-end/">What's the Difference Between the Front-End and Back-End?</a>  
+<a href="https://en.wikipedia.org/wiki/Dynamic_web_page">Dynamic web pages</a>  
+<a href="https://rocketmedia.com/blog/static-vs-dynamic-websites">Static vs. Dynamic Websites: What are They and Which is Better?</a>  
