change the title

--- a/_posts/2015-11-24-When.md
+++ b/_posts/2015-11-24-When.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "WHEN"
+title: "When Static/Dynamic Website is the best choice"
 date: 2015-11-24 03:21:35
 image: '/assets/img/'
-description: 'When Static/Dynamic Website is the best choice'
+description: ''
 tags:
 - jekyll
 categories:
