--- a/_posts/2015-11-24-When.md
+++ b/_posts/2015-11-24-When.md
@@ -14,6 +14,7 @@ twitter_text: 'How to install Jekyll.'
 Last couple of weeks we have been going over differnces and similarties between static and dynamic website. But the crucial question of this work is, When static/dynamic website is the best choice for you?  
 If you only have a need for a very basic website that has just a couple pages, you may not see a need to go down the route of dynamic server-side programming and choose to write static client-side HTML and CSS pages. For example, the website you are surrfing right now. It's a very basic website with no features included, all you can do is just read from it.  
 In the other hand, if there are specific needs or features that must be included with the website, the only way to get those is to go with a dynamic server-side programming method. For example, if you need your website to have login capabilities or you want your website to stay fresh and up-to-date with the latest styles and trends, without accomplish that manually, then you would need to go with dynamic website.  
+In the <a href="http://khaledarnaout.info/">website</a> we designed before using wordpress, we have the capability to make users, allow them to comment on posts, we have a calendar will update itself automatically, plus we have the images slider where it switch between certain images automatically.  
 {% highlight ruby %}
 So in one sentence, if the website needs to connect to databases then dynamic website is your only choice. Where if your website in its simplest form like publishing document blogs or any type of data in general, then going with static website is the best option.  
 {% endhighlight %}
